# Grafana

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
terraform/: .terraform.lock.hcl  grafana.tf  main.tf
terraform/modules/synthetic/: check.tf  main.tf  variables.tf  versions.tf
tm_data/: run.py
